--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+  uuid: ^2.2.2
+  device_info: ^1.0.0
+  intl: ^0.16.1
+  mime: ^0.9.7
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
